# django_cache_machine

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/config/: container.py  settings.py  swagger.py  urls.py
src/core/: admin.py  apps.py  models.py  repository.py  serializers.py  urls.py  views.py
src/core/interfaces/: repository.py
src/core/interfaces/services/: core.py  pdf.py
src/core/management/commands/: csu.py
src/core/migrations/: 0001_initial.py  0002_alter_item_options.py
src/core/services/: core.py  pdf.py
